[project]
name = "anireveal-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "djangorestframework>=3.16.1",
    "google-generativeai>=0.8.5",
    "infisicalsdk",
    "psycopg-binary>=3.2.9",
    "supabase>=2.18.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.11",
]
